<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tampilan2"
    android:padding="20dp"
    tools:context=".AyamBakar">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/headAyamB"
        android:textSize="30dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:background="@color/cardview_shadow_start_color"/>
    <ImageView
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:src="@drawable/ayambakar"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_shadow_start_color"
        android:text="@string/harga"
        android:textSize="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_shadow_start_color"
        android:textSize="20dp"
        android:text="@string/hayamb"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:background="@color/cardview_shadow_start_color"
        android:text="@string/des"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textSize="20dp"
        android:background="@color/cardview_shadow_start_color"
        android:text="@string/desAyamb"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jumlah"
        android:textSize="20dp"
        android:background="@color/cardview_shadow_start_color"
        android:layout_marginBottom="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/kurangAyamBakar"
            android:background="@color/tombol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus"
            android:textSize="20dp"/>
        <TextView
            android:id="@+id/tv_ayamBakar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/nol"
            android:background="@color/cardview_shadow_start_color"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>
        <Button
            android:id="@+id/tambahAyamBakar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/tombol"
            android:text="@string/plus"
            android:textSize="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:background="@color/cardview_shadow_start_color"
            android:text="@string/total"/>
        <TextView
            android:id="@+id/tv_totalAyamBakar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/cardview_shadow_start_color"
            android:text="@string/nol"
            android:textSize="20dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/beliAyamBakar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/tombol"
        android:textSize="20dp"
        android:text="@string/beli"/>
    </LinearLayout>
    </ScrollView>
</RelativeLayout>